# rownania-rozniczkowe-projekt2024

./: .gitignore  Cargo.toml  README.md  calcs.tex
src/: cli.rs  main.rs  phi.rs
