[package]
name = "gpot"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Łukasz Dragon <ldragon@student.agh.edu.pl>"]
description = "Solve a differential equation describing gravitational potential in one dimension using the finite element method."

[dependencies]
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
plotters = "0.3.3"
clap = { version = "4.1", features = ["derive"] }